--- a/html/Drinks.html
+++ b/html/Drinks.html
@@ -84,7 +84,7 @@
               <img src="../img/1.png" alt="Menu" class="img-fluid" id="menu-img">
             </div>
           </div>
-          <p class="lead text-center">Do not forget to contact us for more information or ask around!😁</p>
+          <p class="lead text-center">Do not forget to contact us for more information or ask around!</p>
         </div>
       </section>
       
