--- a/html/Drinks.html
+++ b/html/Drinks.html
@@ -19,7 +19,7 @@
         <!-- img-fluid rounded-circle d-none d-md-block about-img -->
           <!-- LOGO -->
           <div class="nav-brand">
-            <h4><i>Devine's Projects</i></h4>
+            <h4><i>Divine Projects</i></h4>
           </div>
 
           <ul class="nav-links">
