--- a/html/Meals.html
+++ b/html/Meals.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="../css/Meals.css">
 
-    <title>Devine's projects</title>
+    <title>Divine projects</title>
 </head>
 
 
