--- a/html/Drinks.html
+++ b/html/Drinks.html
@@ -41,7 +41,7 @@
                   <!-- More dropdown items... -->
                 </ul>
               </li>
-              <li><a href="#contact-us">Contact</a></li>
+              <li><a href="../index.html#contact-us">Contact</a></li>
             </div>
           </ul>
         </nav>
