--- a/html/Drinks.html
+++ b/html/Drinks.html
@@ -19,7 +19,7 @@
         <!-- img-fluid rounded-circle d-none d-md-block about-img -->
           <!-- LOGO -->
           <div class="nav-brand">
-            <h4><i>Divine Projects</i></h4>
+            <h4><i>Devine's Projects</i></h4>
           </div>
 
           <ul class="nav-links">
@@ -41,7 +41,7 @@
                   <!-- More dropdown items... -->
                 </ul>
               </li>
-              <li><a href="../index.html#contact-us">Contact</a></li>
+              <li><a href="#contact-us">Contact</a></li>
             </div>
           </ul>
         </nav>
@@ -55,9 +55,7 @@
         <div class="col-md-6 m-auto text-center">
           <!-- relevant bg-img & allows readibility of content -->
           <h1 class="display-4">Beverages</h1>
-          <p class="lead">
-            Discover our exquisite range of beverages, from refreshing mocktails to artisanal cocktails, crafted to perfection for every palate. Experience the rich flavors and expert craftsmanship in every sip.
-          </p>
+          <p class="lead"> Discover our exquisite range of beverages, from refreshing mocktails to artisanal cocktails, crafted to perfection for every palate. Experience the rich flavors and expert craftsmanship in every sip.</p>
         </div>
       </div>
     </div>
@@ -84,6 +82,7 @@
               <img src="../img/1.png" alt="Menu" class="img-fluid" id="menu-img">
             </div>
           </div>
+          <br>
           <p class="lead text-center">Do not forget to contact us for more information or ask around!</p>
         </div>
       </section>
