--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/Meal.jpeg" class="d-block w-100" alt="...">
+      <img src="img/food.pdf.png" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/food.pdf.png" class="d-block w-100" alt="...">
+      <img src="img/Meal.jpeg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="img/cocktail.pdf.png" class="d-block w-100" alt="...">
@@ -97,106 +97,48 @@
 
 
     <!-- RATING CARDS SECTION  -->
-    <section id="our-rating" class="">
-        <div class="container">
+    <!-- RATING CARDS SECTION  -->
+<section id="our-rating" class="py-5">
+  <div class="container">
+      <div class="section-title text-center">
+          <h2>Our Products</h2>
+          <p class="lead">At Divine Projects, we take pride in offering a diverse range of culinary delights crafted with the finest ingredients and utmost care. From delectable meals to refreshing drinks, our products are designed to tantalize your taste buds and elevate your dining experience. Discover the perfect blend of tradition and innovation in every bite and sip.</p>
+      </div>
 
-          <div class="section-tittle">
-            <h2 class="text-center">Our Products</h2>
-            <p class="text-center lead">At Divine Projects, we take pride in offering a diverse range of culinary delights crafted with the finest ingredients and utmost care. From delectable meals to refreshing drinks, our products are designed to tantalize your taste buds and elevate your dining experience. Discover the perfect blend of tradition and innovation in every bite and sip.</p>
+      <div class="row justify-content-center">
+        <div class="col-md-4 col-sm-6 mb-4">
+          <div class="card">
+              <img src="img/5.png" alt="Product 2" class="img-fluid">
+              <div class="card-body">
+                  <h4>Refreshing Drink</h4>
+                  <p>Cool down with our signature handcrafted beverages.</p>
+                  <a href="html/Drinks.html" class="btn btn-primary">Check Out the Menu</a>
+              </div>
           </div>
-
-            <div class="row container  align-items-center first-row">
-                <div class="col-md-4">
-                    <div class="flip-card">
-                        <div class="flip-card-inner">
-                          <div class="flip-card-front">
-                          </div>
-                          <div class="flip-card-back">
-                            <img src="img/4.png" alt="Avatar" style="width:250px;height:300px;">
-                          </div>
-                          <div class="flip-cards">
-                          </div>
-                        </div>
-                      </div>
+      </div>
+          <div class="col-md-4 col-sm-6 mb-4">
+              <div class="card">
+                  <img src="img/Meal.jpeg" alt="Product 1" class="img-fluid">
+                  <div class="card-body">
+                      <h4>Delicious Meal</h4>
+                      <p>Experience the richness of flavors with our expertly crafted meals.</p>
+                      <a href="html/Meals.html" class="btn btn-primary">Check Out the Menu</a>
                   </div>
-
-                  <div class="col-md-4">
-                    <div class="flip-card">
-                        <div class="flip-card-inner">
-                          <div class="flip-card-front">
-                          </div>
-                          <div class="flip-card-back">
-                            <img src="img/5.png" alt="Avatar" style="width:250px;height:300px;">
-                          </div>
-                          <div class="flip-cards">
-                          </div>
-                        </div>
-                      </div>
-                  </div>
-
-                  <div class="col-md-4">
-                    <div class="flip-card">
-                        <div class="flip-card-inner">
-                          <div class="flip-card-front">
-                          </div>
-                          <div class="flip-card-back">
-                            <img src="img/6.png" alt="Avatar" style="width:250px;height:300px;">
-                          </div>
-                          <div class="flip-cards">
-                          </div>
-                        </div>
-                      </div>
-                  </div>
-            </div>
-
-            <div class="row container  align-items-center first-row">
-              <div class="col-md-4">
-                  <div class="flip-card">
-                      <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                          <img src="img/flip-card-demo-piv.jpg" alt="Avatar" style="width:350px;height:300px;">
-                        </div>
-                        <div class="flip-card-back">
-                            <img src="img/7.png" alt="Avatar" style="width:250px;height:300px;">
-                        </div>
-                        <div class="flip-cards">
-                        </div>
-                      </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                  <div class="flip-card">
-                      <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                          <img src="img/flip-card-demo-piv.jpg" alt="Avatar" style="width:350px;height:300px;">
-                        </div>
-                        <div class="flip-card-back">
-                            <img src="img/Meal.jpeg" alt="Avatar" style="width:250px;height:300px;">
-                        </div>
-                        <div class="flip-cards">
-                        </div>
-                      </div>
-                    </div>
-                </div>
-
-                <div class="col-md-4">
-                  <div class="flip-card">
-                      <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                          <img src="img/flip-card-demo-piv.jpg" alt="Avatar" style="width:350px;height:300px;">
-                        </div>
-                        <div class="flip-card-back">
-                            <img src="img/Food.jpeg" alt="Avatar" style="width:250px;height:300px;">
-                        </div>
-                        <div class="flip-cards">
-                        </div>
-                      </div>
-                    </div>
-                </div>
+              </div>
           </div>
-        </div>
-    </section>
+          <div class="col-md-4 col-sm-6 mb-4">
+              <div class="card">
+                  <img src="img/lipapa.JPG" alt="Product 3" class="img-fluid">
+                  <div class="card-body">
+                      <h4>Gourmet Dish</h4>
+                      <p>A perfect blend of tradition and innovation in every bite.</p>
+                      <a href="html/Meals.html" class="btn btn-primary">Check Out the Menu</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+</section>
 
 <!-- CONTACT US SECTION -->
 <section id="contact-us" class="bg-light py-5">
@@ -259,7 +201,7 @@
                         <!-- Add some social media icons for more interactivity -->
                         <div class="social-icons mt-3">
                             <a href="https://www.facebook.com/profile.php?id=61561457879688&mibextid=LQQJ4d" target="_blank" class="text-white me-2"><i class="bi bi-facebook"></i></a>
-                            <a href="https://twitter.com" target="_blank" class="text-white me-2"><i class="bi bi-twitter"></i></a>
+                            <a href="https://tiktok.com" target="_blank" class="text-white me-2"><i class="bi bi-twitter"></i></a>
                             <a href="https://instagram.com" target="_blank" class="text-white"><i class="bi bi-instagram"></i></a>
                         </div>
                     </div>
