--- a/html/Meals.html
+++ b/html/Meals.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="../css/Meals.css">
 
-    <title>Divine projects</title>
+    <title>Devine's projects</title>
 </head>
 
 
@@ -41,7 +41,7 @@
                   <!-- More dropdown items... -->
                 </ul>
               </li>
-              <li><a href="../index.html#contact-us">Contact</a></li>
+              <li><a href="#contact-us">Contact</a></li>
             </div>
           </ul>
         </nav>
@@ -82,9 +82,10 @@
           </div>
           <div class="row justify-content-center">
             <div class="col-md-6 text-center">
-              <img src="../img/1.png" alt="Menu" class="img-fluid" id="menu-img">
+              <img src="../img/fastfoodmenu.jpg" alt="Menu" class="img-fluid" id="menu-img">
             </div>
           </div>
+          <br>
           <p class="lead text-center">Do not forget to contact us for more information or ask around!</p>
         </div>
       </section>
