--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/food.pdf.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
       <img src="img/Meal.jpeg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/cocktail.pdf.png" class="d-block w-100" alt="...">
+      <img src="img/IMG_6904.JPG" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/IMG_6903.JPG" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
