--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <img src="img/Meal.jpeg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/IMG_6904.JPG" class="d-block w-100" alt="...">
+      <img src="img/IMG_6904.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="img/IMG_6903.JPG" class="d-block w-100" alt="...">
