--- a/html/Drinks.html
+++ b/html/Drinks.html
@@ -55,7 +55,7 @@
         <div class="col-md-6 m-auto text-center">
           <!-- relevant bg-img & allows readibility of content -->
           <h1 class="display-4">Beverages</h1>
-          <p class="lead"> Discover our exquisite range of beverages, from refreshing mocktails to artisanal cocktails, crafted to perfection for every palate. Experience the rich flavors and expert craftsmanship in every sip.</p>
+          <p class="lead"> Discover our exquisite range of beverages, from refreshing mocktails to artisanal cocktails, crafted to perfection for every palate.</p>
         </div>
       </div>
     </div>
