--- a/html/Meals.html
+++ b/html/Meals.html
@@ -56,13 +56,13 @@
           <!-- relevant bg-img & allows readibility of content -->
           <h1 class="display-4">Meals</h1>
           <p class="lead">
-            Savor our delectable meals, crafted with the finest ingredients and culinary expertise. Each dish promises a harmonious blend of flavors and textures, designed to delight your taste buds.
+            Savor our delectable meals, crafted with the finest ingredients and culinary expertise.
           </p>
         </div>
       </div>
     </div>
   </section>
-
+<br>
 
 
     <!-- 
