--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <title>Devines's projects</title>
+    <link rel="icon" href="img/devine.jpeg" type="image/x-icon">
 </head>
 
 <body>
