Add favicon link to Drinks.html

--- a/html/Drinks.html
+++ b/html/Drinks.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/Drinks.css">
 
     <title>Divine projects</title>
+    <link rel="icon" href="../img/devine.jpeg" type="image/x-icon">
 </head>
 
 
