--- a/html/Meals.html
+++ b/html/Meals.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/Meals.css">
 
     <title>Devine's projects</title>
+    <link rel="icon" href="../img/devine.jpeg" type="image/x-icon">
 </head>
 
 
