--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="styles.css">
 
-    <title>Devines's projects</title>
+    <title>Divines's projects</title>
     <link rel="icon" href="img/devine.jpeg" type="image/x-icon">
 </head>
 
