--- a/html/Meals.html
+++ b/html/Meals.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="../css/Meals.css">
 
-    <title>Devine's projects</title>
+    <title>Divine's projects</title>
     <link rel="icon" href="../img/devine.jpeg" type="image/x-icon">
 </head>
 
